--- a/package.json
+++ b/package.json
@@ -17,16 +17,16 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
-        "@inertiajs/inertia": "^0.11.1",
-        "@inertiajs/inertia-react": "^0.8.1",
         "@inertiajs/react": "^2.0.0",
         "@vitejs/plugin-react": "^4.3.4",
         "chart.js": "^4.4.7",
+        "leaflet": "^1.9.4",
         "lucide-react": "^0.469.0",
         "react": "^19.0.0",
         "react-chartjs-2": "^5.3.0",
         "react-dom": "^19.0.0",
         "react-feather": "^2.0.10",
+        "react-leaflet": "^4.2.1",
         "react-router-dom": "^7.1.1"
     }
 }
