--- a/package.json
+++ b/package.json
@@ -8,27 +8,31 @@
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.7",
         "@tailwindcss/typography": "^0.5.10",
+        "@types/node": "^22.14.0",
         "autoprefixer": "^10.4.17",
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0.0",
         "postcss": "^8.4.35",
         "postcss-nesting": "^12.0.2",
         "tailwindcss": "^3.4.1",
+        "typescript": "~5.8.2",
         "vite": "^5.0.0"
     },
     "dependencies": {
-        "@inertiajs/inertia": "^0.11.1",
-        "@inertiajs/inertia-react": "^0.8.1",
+        "@google/genai": "^1.13.0",
         "@inertiajs/react": "^2.0.0",
         "@vitejs/plugin-react": "^4.3.4",
         "chart.js": "^4.4.7",
+        "jszip": "^3.10.1",
         "leaflet": "^1.9.4",
-        "lucide-react": "^0.469.0",
+        "lucide-react": "^0.539.0",
+        "pdfjs-dist": "^3.11.174",
         "react": "^19.0.0",
         "react-chartjs-2": "^5.3.0",
         "react-dom": "^19.0.0",
         "react-feather": "^2.0.10",
         "react-leaflet": "^5.0.0",
-        "react-router-dom": "^7.1.1"
+        "react-router-dom": "^7.1.1",
+        "xlsx": "^0.18.5"
     }
 }
